@@ -6,7 +6,7 @@ JAVA_HOME=$ZXPOLY_HOME/jre
 #JAVA_EXTRA_GFX_FLAGS="-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
 #JAVA_EXTRA_GFX_FLAGS="-Dsun.java2d.opengl=true"
 
-JAVA_FLAGS="-XX:+UseZGC -XX:+TieredCompilation -XX:MaxMetaspaceSize=128m -Dsun.rmi.transport.tcp.maxConnectionThreads=0 -XX:-DontCompileHugeMethods -XX:+DisableAttachMechanism -Xverify:none -Xms512m -Xmx1024m --add-opens=java.base/java.util=ALL-UNNAMED"
+JAVA_FLAGS="-XX:+UseZGC -XX:+TieredCompilation -XX:MaxMetaspaceSize=128m -Dsun.rmi.transport.tcp.maxConnectionThreads=0 -XX:-DontCompileHugeMethods -XX:+DisableAttachMechanism -Xverify:none -Xms512m -Xmx1024m --add-opens=java.base/java.util=ALL-UNNAMED  --enable-native-access=ALL-UNNAMED"
 
 JAVA_RUN=$JAVA_HOME/bin/java
 
@@ -20,7 +20,7 @@ then
     fi
 fi
 
-$JAVA_RUN $JAVA_FLAGS $JAVA_EXTRA_GFX_FLAGS -Djava.library.path="$ZXPOLY_HOME" -jar "$ZXPOLY_HOME"/zxpoly-emul.jar $@
+$JAVA_RUN $JAVA_FLAGS $JAVA_EXTRA_GFX_FLAGS -jar "$ZXPOLY_HOME"/zxpoly-emul.jar $@
 THE_PID=$!
 echo $THE_PID>$ZXPOLY_HOME/.pid
 wait $THE_PID
